<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountrySelectionActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    app:statusBarBackground="@color/colorPrimaryDark">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/choose_country"
        android:fitsSystemWindows="false"
        android:textAlignment="center"
        app:layout_collapseMode="pin"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/white_tr_50"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/search"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/search"
            android:background="@color/colorPrimaryDark"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchView"
            android:layout_above="@id/confirmButton"
            android:background="@color/windowBackground"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            android:layout_alignParentBottom="true"
            android:scaleType="centerInside"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:elevation="10dp"
            android:enabled="false"/>
    </RelativeLayout>


</LinearLayout>