<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HeatMapActivity">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DashboardActivity"
        class="com.google.android.libraries.maps.SupportMapFragment"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/statusSelectionGroup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:fitsSystemWindows="true"
        android:elevation="10dp"
        app:checkedButton="@id/activeButton">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activeButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:shapeAppearance="@style/Rounded"
            app:cornerRadius="5dp"
            android:text="@string/active"
            android:textSize="12sp"
            app:strokeColor="@color/white"
            android:textColor="@color/button_text_state"
            app:strokeWidth="2dp"
            android:insetTop="0dp"
            app:backgroundTint="@color/active_button_state"
            android:insetBottom="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/effectedButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:shapeAppearance="@style/Rounded"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white"
            android:textColor="@color/button_text_state"
            android:text="@string/effected"
            android:textSize="12sp"
            app:strokeWidth="2dp"
            app:backgroundTint="@color/effected_button_state"
            android:insetTop="0dp"
            android:insetBottom="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deathButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:shapeAppearance="@style/Rounded"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white"
            android:textColor="@color/button_text_state"
            android:text="@string/death"
            android:textSize="12sp"
            app:strokeWidth="2dp"
            app:backgroundTint="@color/death_button_state"
            android:insetTop="0dp"
            android:insetBottom="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recoveredButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:shapeAppearance="@style/Rounded"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white"
            android:textColor="@color/button_text_state"
            android:text="@string/recovered"
            android:textSize="12sp"
            app:strokeWidth="2dp"
            app:backgroundTint="@color/recovered_button_state"
            android:insetTop="0dp"
            android:insetBottom="0dp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>