<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/globalDataItemHeader">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:gravity="center">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/country"
                android:paddingStart="20dp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/effectedCardView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:cardUseCompatPadding="false"
                app:cardElevation="0dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/affected"
                android:layout_centerHorizontal="true"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/effectedCardView"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/effected"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/recoveredCardView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:cardUseCompatPadding="false"
                app:cardElevation="0dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/recovered"
                android:layout_centerHorizontal="true"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recoveredCardView"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/recovered"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/deathCardView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:cardUseCompatPadding="false"
                app:cardElevation="0dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/death"
                android:layout_centerHorizontal="true"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deathCardView"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/death"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_tr_50"/>
</LinearLayout>