<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeScreenActivity"
    android:background="@color/windowBackground"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/thankYouTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_downloading"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@+id/thankYouTextView"/>
    </RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splashImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_fileName="lottie/splash_anim.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintTop_toBottomOf="@id/titleContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="40dp"
        app:lottie_speed="0.8"
        app:layout_constraintBottom_toTopOf="@id/selectCountryText"
        app:layout_constraintDimensionRatio="1:0.7"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selectCountryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_country"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="viewStart"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/selectedCountryContainer"/>

    <RelativeLayout
        android:id="@+id/selectedCountryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/proceedButton"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorColor="@color/colorAccent"/>

        <RelativeLayout
            android:id="@+id/selectCountryContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectCountryButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                app:cornerRadius="30dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/select_country"
                android:paddingHorizontal="20dp"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/countrySelectorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tickContainer"
                android:visibility="visible">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/flagImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:padding="0dp"/>

                <TextView
                    android:id="@+id/countryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/flagImage"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/tickContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    app:cornerRadius="20dp"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/change"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/colorAccent"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="30dp"
        android:text="@string/proceed"
        android:textStyle="bold"
        android:textSize="16sp"
        android:enabled="false"
        android:textColor="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>