<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="3"
    android:paddingHorizontal="5dp"
    android:id="@+id/headerLayout">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/effectedCardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/affected"
        app:contentPadding="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:outlineAmbientShadowColor="@color/affected"
        android:outlineSpotShadowColor="@color/affected">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:text="@string/effected"/>
                <com.hanks.htextview.evaporate.EvaporateTextView
                    android:id="@+id/effectedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:text="0"/>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recoveredCardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/recovered"
        app:contentPadding="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:outlineAmbientShadowColor="@color/recovered"
        android:outlineSpotShadowColor="@color/recovered">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:text="@string/recovered"/>
                <com.hanks.htextview.evaporate.EvaporateTextView
                    android:id="@+id/recoveredTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:text="0"/>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/deathCardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/death"
        app:contentPadding="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:outlineAmbientShadowColor="@color/death"
        android:outlineSpotShadowColor="@color/death">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:text="@string/death"/>
                <com.hanks.htextview.evaporate.EvaporateTextView
                    android:id="@+id/deathTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:text="0"/>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>